--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=1000
-See_Change_Web_DB=mongodb://192.168.13.83/See_Change_Web
+See_Change_Web_DB=mongodb+srv://<username>:<password>@cluster0.mongodb.net/See_Change_Web?retryWrites=true&w=majority
 JWT_SECRET=Consoul@123
 JWT_EXPIRES=1y
 RAZORPAY_KEY_ID=your_key_id
