--- a/.env
+++ b/.env
@@ -1,15 +1,11 @@
 PORT=1000
+PROXY_ENABLED=false
 See_Change_Web_DB=mongodb://192.168.13.83/See_Change_Web
 MONGODB_URI=mongodb+srv://rishirri108:1234567890@cluster0.qpi4j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
 JWT_SECRET=Consoul@123
 JWT_EXPIRES=1y
 RAZORPAY_KEY_ID=your_key_id
 RAZORPAY_KEY_SECRET=your_key_secret
-
-# MongoDB1 username = rishirri108 ,  password =  OI4yDA7LSS7EkCfb
-# MongoDB2 username = rishirri108 ,  password =  OI4yDA7LSS7EkCfb
-
 
 # ACCESS_TOKEN_SECRET=ghfjbdnsfmaddnbjhdsdgfnadivsbeaiwfagshshagfdwGHTJ
 # ACCESS_TOKEN_EXPIRATION=3600s
