--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
 PORT=1000
 PROXY_ENABLED=false
-See_Change_Web_DB=mongodb://192.168.13.83/See_Change_Web
-MONGODB_URI=mongodb+srv://rishirri108:1234567890@cluster0.qpi4j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MrRight_DB=mongodb://192.168.13.83/MrRight
+Rcyc_DB=mongodb://192.168.13.83/Rcyc
+# MONGODB_URI=mongodb+srv://rishirri108:1234567890@cluster0.qpi4j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_MrRight=mongodb+srv://rishirri108:1234567890@cluster0.qpi4j.mongodb.net/MrRight?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_Rcyc=mongodb+srv://rishirri108:1234567890@cluster0.qpi4j.mongodb.net/Rcyc?retryWrites=true&w=majority&appName=Cluster0
+
 JWT_SECRET=Consoul@123
 JWT_EXPIRES=1y
 RAZORPAY_KEY_ID=your_key_id
