--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=1000
 PROXY_ENABLED=false
+See_Chane_Web_DB=mongodb://192.168.13.83/See_Chane_Web
 MrRight_DB=mongodb://192.168.13.83/MrRight
 Rcyc_DB=mongodb://192.168.13.83/Rcyc
 # MONGODB_URI=mongodb+srv://rishirri108:1234567890@cluster0.qpi4j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
