--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "adm-zip": "^0.5.16",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cache-manager": "^5.7.6",
     "cache-manager-redis-store": "^3.0.1",
