--- a/.env
+++ b/.env
@@ -3,9 +3,11 @@ PROXY_ENABLED=false
 See_Chane_Web_DB=mongodb://192.168.13.83/See_Chane_Web
 MrRight_DB=mongodb://192.168.13.83/MrRight
 Rcyc_DB=mongodb://192.168.13.83/Rcyc
+See360_DB=mongodb://192.168.13.83/See360
 # MONGODB_URI=mongodb+srv://rishirri108:1234567890@cluster0.qpi4j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_MrRight=mongodb+srv://rishirri108:1234567890@cluster0.qpi4j.mongodb.net/MrRight?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_Rcyc=mongodb+srv://rishirri108:1234567890@cluster0.qpi4j.mongodb.net/Rcyc?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_See360=mongodb+srv://rishirri108:1234567890@cluster0.qpi4j.mongodb.net/See360?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET=Consoul@123
 JWT_EXPIRES=1y
